--- a/style/season_style.css
+++ b/style/season_style.css
@@ -201,7 +201,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('images/Image_Links.jpg');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('../images/Image_Links.jpg');
     background-size: cover;
     background-position: center;
     padding: var(--base-padding, 10px); /* Adjusted to match other nav-groups */
@@ -234,7 +234,7 @@
     min-width: 0;
     max-width: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('images/Image_Definitions.jpg');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('../images/Image_Definitions.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -289,7 +289,7 @@
 .nav-group.notes {
     grid-column: 1;
     grid-row: 1;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('images/Image_Notes.jpg');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('../images/Image_Notes.jpg');
     background-size: cover;
     background-position: center;
 }
