--- a/site/_sass/minima/_layout.scss
+++ b/site/_sass/minima/_layout.scss
@@ -420,9 +420,35 @@
   padding: 0;
 
   .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    
     h1 {
+      flex: 1;
       margin: 0;
       text-align: center;
+    }
+
+    .header-navigation {
+      color: inherit;
+      text-decoration: none;
+      font-size: 0.9rem;
+      white-space: nowrap;
+
+      &-previous {
+        text-align: left;
+      }
+
+      &-next {
+        text-align: right;
+      }
+
+      &-placeholder {
+        width: 4rem;
+        visibility: hidden;
+      }
     }
   }
 
