Minor fix in competitions overview page

--- a/site/_layouts/competitions.html
+++ b/site/_layouts/competitions.html
@@ -13,7 +13,9 @@ layout: default
       <div class="competition-list__link">
         <a class=""
           href="{{ competition.url | relative_url }}" 
-          {% if competition.image_path %}
+          {% if competition.competition_name %}
+          style="background-image: url('{{ '/resources/' | append: competition.competition_name | append: '/' | append: competition.image_path | relative_url }}');"
+          {% else %}
           style="background-image: url('{{ '/assets/images/competitions/' | append: competition.image_path | relative_url }}');"
           {% endif %}
           >
