--- a/site/_includes/header.html
+++ b/site/_includes/header.html
@@ -18,9 +18,9 @@
 
         <div class="trigger">
           {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            {%- assign nav_page = site.pages | where: "path", path | first -%}
+            {%- if nav_page.title -%}
+            <a class="page-link {% if page.url contains nav_page.url or page.path contains nav_page.path %}page-link__active{% endif %}" href="{{ nav_page.url | relative_url }}">{{ nav_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
