Add loader setup for sheets and other async sources

--- a/site/_layouts/competition.html
+++ b/site/_layouts/competition.html
@@ -62,7 +62,9 @@ layout: default
 
         {% if page.show_definitions %}
         <h2>Definitions</h2>
-        <div id="definitions-container"></div>
+        <div id="definitions-container">
+          {% include loader.html %}
+        </div>
         {% endif %}
 
         {% if page.information %}
