--- a/site/_sass/minima/_layout.scss
+++ b/site/_sass/minima/_layout.scss
@@ -536,3 +536,21 @@
     display: block;
   }
 }
+
+.loader {
+  img { 
+    animation: spin 1s linear infinite;
+    
+    width: 50px;
+    height: 50px;
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  }
+}
